@@ -1,4 +1,12 @@
-2008-02-20  Emmanuele Bassi  <ebassi@openedhand.com>
+2008-02-20  Tomas Frydrych  <tf@openedhand.com>
+
+	* clutter/x11/clutter-x11.h:
+	* clutter/x11/clutter-backend-x11.c:
+	(clutter_x11_set_display):
+	Function to set X display connection prior to calling
+	clutter_init(); stripped loads of trailing space.
+
+2008-02-20  Tomas Frydrych  <tf@openedhand.com>
 
 	* clutter/clutter-marshal.list:
 	* clutter/glx/Makefile.am:
